# LangChain_RAG

./: .env.dev.example  .env.prod.example  .env.test.example  .gitignore  README.md  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  eval_ablation.py  eval_results.json  package-lock.json  pyproject.toml  rag_chat.py  requirements-all.txt  requirements-bge.txt  requirements-chroma.txt  requirements-dev.txt  requirements-openai.txt  requirements.txt
config/: models.yaml  presets.yaml
datasets/evaluation/: agent_test_questions.json  rag_eval_v1.jsonl
docs/: PROGRESS.md  api-contract.md  architecture-rag.md  demo-script.md  evaluation-report.md  knowledge-base-storage.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
scripts/: build_check.py
src/: __init__.py
src/agent/: __init__.py  router.py  state.py  tools.py  workflow.py
src/api/: __init__.py  api_models.py  app.py  chat_routes.py  config_routes.py  dependencies.py  document_store.py  errors.py  graph_model_extractor.py  llm_query_rewriter.py  real_rag_service.py  unified_rag_service.py
tests/: rag_fakes.py  test_build_check.py  test_chat_model_switch_runtime.py  test_chat_models.py  test_chat_preset_prompt.py  test_chat_presets.py  test_chat_search.py  test_chat_sessions.py  test_chat_stats_export.py  test_chat_stream.py  test_environment_isolation.py  test_graph_model.py  test_knowledge_document_store.py  test_model_runtime.py  test_retry_policy.py  test_runtime_config.py  test_structured_logging.py  tool_fakes.py
(+176 files in other folders)
