[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-rag"
version = "0.1.0"
description = "多范式 RAG 实验平台"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "langchain_rag/prompts"
"datasets" = "langchain_rag/datasets"
